# pyalra

./: .gitignore  .pdm-python  .sourcery.yaml  CHANGELOG.md  README.md  mypy.ini  noxfile.py  pyproject.toml  ruff.toml
src/pyalra/: __init__.py  alra.py  choose_k.py  logger.py  logging.py
src/{{module}}/: __init__.py  __main__.py  logger.py
tests/: test_choose_k.py
tests/data/choose_k/: d.csv  num_sds.csv
