[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "Miles Smith", email = "miles-smith@omrf.org"},
]
license = {text = "LGPL3"}
requires-python = "<4,>=3.10"
dependencies = [
    "scikit-learn<2.0.0,>=1.4.0",
    "numpy<1.27,>1.26",
    "loguru<1.0.0,>=0.7.2",
    "scipy<2.0,>=1.12",
    "jax>=0.4.27",
]
name = "pyalra"
version = "1.5.0"
description = "Translation of the ALRA R package"
readme = "README.md"

[project.urls]
homepage = "https://github.com/milescsmith/pyalra"
repository = "https://github.com/milescsmith/pyalra"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest<9.0.0,>=8.0.0",
    "nox<2025.0.0,>=2024.0.0",
    "nox-poetry<2.0.0,>=1.0.3",
    "sourcery<2.0.0,>=1.15.0",
    "ruff>=0.4.4",
]

[tool.pdm.build]
includes = [
    "tests",
]