[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pyalra"
version = "1.6.0"
description = "Translation of the ALRA R package"
authors = [
    {name = "Miles Smith", email = "miles-smith@omrf.org"},
]
requires-python = "<4,>=3.10"
readme = "README.md"
license = {text = "LGPL3"}
dependencies = [
    "scikit-learn>=1.5.1",
    "numpy>=2.0.0",
    "loguru>=0.7.2",
    "scipy>=1.14.0",
]

[project.urls]
homepage = "https://github.com/milescsmith/pyalra"
repository = "https://github.com/milescsmith/pyalra"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.2.2",
    "nox>=2024.4.15",
    "sourcery>=1.20.0",
    "ruff>=0.5.2",
]

[tool.pdm.scripts]
format = "ruff format src/"
lint = "ruff check --fix src/"
all = {composite = ["format", "lint"]}