[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.2.2",
    "nox>=2024.4.15",
    "sourcery>=1.20.0",
]

[tool.pdm.build]
includes = ["tests"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "Miles Smith", email = "miles-smith@omrf.org"},
]
license = {text = "LGPL3"}
requires-python = "<4,>=3.10"
name = "pyalra"
version = "1.5.1"
description = "Translation of the ALRA R package"
readme = "README.md"
dependencies = [
    "scikit-learn>=1.5.1",
    "numpy>=2.0.0",
    "loguru>=0.7.2",
    "scipy>=1.14.0",
]

[project.urls]
homepage = "https://github.com/milescsmith/pyalra"
repository = "https://github.com/milescsmith/pyalra"
